--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "family-bar", 
+    "name": "translation-bar",
     "license": "MPL 1.1/GPL 2.0/LGPL 2.1", 
     "author": "Michał Świtoń <switonmichal@gmail.com>",
     "version": "0.1", 
-    "fullName": "Family Bar",
+    "fullName": "Translation Bar",
     "id": "jid1-EWS4kVkfyZxCjA", 
-    "description": "With this addon you can easyly navigate through Family concept sites"
+    "description": "Search for translation using MegaSlownik.pl"
 }
