--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "translation-bar",
-    "license": "MPL 1.1/GPL 2.0/LGPL 2.1", 
+    "license": "LGPL 2.1",
     "author": "Michał Świtoń <switonmichal@gmail.com>",
-    "version": "0.2",
+    "version": "0.3",
     "fullName": "Translation Bar",
     "id": "jid1-EWS4kVkfyZxCjA", 
     "description": "Search for translation using MegaSlownik.pl"
